# boostvqe

./: .gitignore  .pre-commit-config.yaml  README.md  ansatze.py  benchmark.py  boost_sc.sh  clt.csv  compile.sh  compile_circuit.ipynb  compile_with_cma.sh  compile_with_sgd.sh  compiling.py  gci_boostvqe_circuit_synthesis.ipynb  gci_circ.qasm  ionq_utils.py  issue.ipynb  issue.py  kak_decomposition.ipynb  load_vqe_and_rotate.py  main.py  notebooks_links.md  plotscripts.py  pyproject.toml  quanitnuum.ipynb  quanitnuum_clt.ipynb  quantinuum_dbi.ipynb  quantinuum_dbi_TLFIM.ipynb  quantinuum_dbi_xxz.ipynb  quantinuum_load_gci.ipynb  quantinuum_systemsize.ipynb  run.sh  run_benchmark.sh  run_sequential.sh  run_sgd.sh  run_sgd_exact.sh  run_sgd_hybrid.sh  run_stat.sh  run_vqes.sh  single_commutator_boosting.py  symbolic_circuit_demo.ipynb  (+9 more)
_deprecated_files_boostvqe/extras/: bp_diagnostic.py  compiling.py  load_vqe.py  plot_bp.py  single_commutator_boosting.py
_deprecated_files_boostvqe/notebooks/: XXZ_functions.ipynb  demo_group_commutator_iteration.ipynb  gci_2vqe.ipynb  gci_hva_CNOT_qibo.ipynb  gci_hva_RZZ_qibo.ipynb  gci_qibo.ipynb  quantinuum_native_gate_dbqa.ipynb  quantinuum_native_gate_vqe.ipynb  running_boosting_optimizers.ipynb
bp_tests/Powell_11q_20l_1/: dbi_d_matrices.npz  dbi_energies.npz  dbi_fluctuations.npz  dbi_steps.npz  (+5 more)
examples/: Example_1_DBF_DBQA_x_HVA_XXZ.ipynb  Example_2_DMF_DBQA_x_HVA_XXZ copy 2.ipynb  Example_3_training_HVA.ipynb  Example_4_loading_HVA.ipynb  Example_4_training_DB_DOI_x_HVA.ipynb  Example_5_training_DB_DOI_after_HVA.ipynb
examples_DB-DOI_after_HVA/: Example_3_training_HVA.ipynb  Example_4_training_DB_DOI_x_HVA.ipynb  Example_5_training_DB_DOI_after_HVA.ipynb
examples_Quantinuum_emulator/: example_1_load_prepared_qasm_execute_emulator.ipynb  example_2_gd_optimization_for_db_doi.ipynb
extras/: bp_diagnostic.py  compiling.py  ent_power.py  load_vqe.py  plot_boosts.py  plot_sp.py  polynomial_s.py  run_bp.sh  run_sp.sh  single_commutator_boosting.py  state_preparation.py
notebooks/: Compiling XXZ.ipynb  Compiling XXZ_multiqubits.ipynb  Compiling XXZ_multiqubits.py  Compiling XXZ_simplified.ipynb  Compiling XXZ_simplified_2_CNOT.ipynb  Compiling XXZ_simplified_higher_order.ipynb  Marek Thursday tests in progress.ipynb  Roadmap Notebook.ipynb  TLFIM.ipynb  UsingCopyOfQiboDbi.ipynb  XXZ_functions.ipynb  binary_search.ipynb  binary_search2.ipynb  check_canonical_bracket_init.ipynb  check_utils_select_recursion_step_circuit.ipynb  circuit_based_loss.ipynb  compiling_XXZ.py  compiling_XXZ_test.py  compiling_tests.py  example_utils_loading_gci_concise.ipynb  gate_count.ipynb  gci.ipynb  gci_2vqe.ipynb  gci_3_rounds_7l.ipynb  gci_ISING.ipynb  gci_ISING_gd.ipynb  gci_boostvqe_circuit_synthesis.ipynb  gci_circuits_gradient_descent_trials.ipynb  gci_hva_CNOT_qibo.ipynb  gci_hva_qibo.ipynb  gci_hyperoptimization.ipynb  gci_pytket.ipynb  gci_qibo.ipynb  gradient_descent_circuits_by_hand.ipynb  hva.ipynb  hva_qibo.ipynb  ionq_demo.ipynb  ionq_utils.py  loading_boosting.ipynb  loading_gci.ipynb  (+10 more)
tests/: test_gradients.py
(+2489 files in other folders)
