[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boostvqe"
version = "0.0.1"
description = "Boosting VQE training with DBI algorithm"
authors = ["Qibo&DBI team"]
readme = "README.md"
packages = [{ include = "boostvqe", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
numba = "^0.59.0"

[tool.poetry.group.dev.dependencies]
ipython = "^7.34"
pdbpp = "^0.10.3"
ipykernel = "^6.29.5"

[tool.poetry.group.benchmark.dependencies]
pytest = "^8.0.0"
pytest-benchmark = { version = "^4.0.0", extras = ["histogram"] }

[tool.poe.tasks]
bench = "pytest benchmarks/"

[tool.pytest.ini_options]
testpaths = ['tests/', 'benchmarks/']
python_files = ['test_*.py', 'bench_*.py']
python_classes = ['Test*', 'Benchmark*']
python_functions = ['test_*', 'bench_*']
addopts = [
  "--benchmark-warmup=on",
  "--benchmark-warmup-iterations=100000",
  "--benchmark-disable-gc",
  "--benchmark-histogram=bench-hists/bench",
]
