[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boostvqe"
version = "0.0.1"
description = "Boosting VQE training with DBI algorithm"
authors = ["Qibo&DBI team"]
readme = "README.md"
packages = [{ include = "boostvqe", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
numba = "^0.59.0"
tensorflow = "^2.17.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
qibojit = "^0.1.6"
qiboml = {git = "https://github.com/qiboteam/qiboml"}
qibo_dbqa = {git = "https://github.com/qiboteam/qibo-dbqa.git", rev = "package2"}
qibo = "^0.2.14"

[tool.poetry.group.dev.dependencies]
ipython = "^7.34"
pdbpp = "^0.10.3"

[tool.poe.tasks]
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"
